# data_over_sound

./: .gitignore  README.md  chunker.py  compile.bat  configure_sound_devices.py  dlgs.py  gw.py  main.py  parse.py  pyproject.toml  receiver.py  requirements.txt  stream_text.py  test.py  update.py
files/: helloworld.txt
