[tool.poetry]
name = "data-over-sound"
version = "0.1.0"
description = "This is a program to send small pieces of data using sound waves between airgaped devices"
authors = ["deniz <deniz@r1oaz.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ggwave = "^0.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
